sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: ')' expected but '<-' found.
	while ( i <- 0 to getNombreValeurs()-2 ) {
                  ^AlgBubbleSort1:4: error: ';' expected but ')' found.
	while ( i <- 0 to getNombreValeurs()-2 ) {
                                               ^